03 - global status handler / remove not used try - catch
