# src/routers/users/index.js
@@ -4,7 +4,7 @@ const USERCONTROLLER = require("../../controllers/users");
 const userRoute = Router();
 
 userRoute.get("/getAllUsers", USERCONTROLLER.getAllUsersController);
-userRoute.post("/addUser", USERCONTROLLER.addUser);
+userRoute.post("/register", USERCONTROLLER.register);
 userRoute.post("/login", USERCONTROLLER.login);
 
 module.exports = userRoute;
